test: Lotto의 기능을 테스트하는 테스트 코드 추가
Lotto 객체 생성, 예외 처리 기능 테스트